--- a/Tsang, Kevin Website Project/code.css
+++ b/Tsang, Kevin Website Project/code.css
@@ -1,21 +1,66 @@
 *{
     margin:0;
     padding:0;
-    font-family:'Segoe UI'
+    font-family:monospace;
+    font-weight:normal;
 }
 
-.main {
+body {
     width:100%;
     height:100vh;
-    background-image:url(https://static.vecteezy.com/system/resources/previews/002/099/721/original/mountain-beautiful-landscape-background-design-illustration-free-vector.jpg);
+    background-image:url(https://wallpapercave.com/wp/wp5748138.png);
     background-size: cover;
     background-position: center;
 }
-
-.maintext{
-    font-size: 30px;
-    position: absolute;
-    margin-top: 400px;
-    margin-left:35%;
+.links {
+    text-align: center;
+    font-size: 50px;
+    position:relative;
+    padding: 275px;
+}
+.titletext{
+    font-size: 50px;
+    position: relative;
+    text-align: center;
+    padding: 300px;
+    color: white;
+}
+.back{
+    font-size: 50px;
+    position:fixed;
+    bottom:0%;
+    text-align:center;
 }
 
+#subtext{
+    text-underline-position: auto;
+}
+#name {
+    font-size:120px;
+    color:white;
+    position: absolute;
+    margin-top: 50px;
+    margin-left:32.5%;
+}
+
+
+a:link {
+    color: white;
+    background-color: transparent;
+    text-decoration: none;
+  }
+a:visited {
+    color: white;
+    background-color: transparent;
+    text-decoration: none;
+  }
+a:hover {
+    color: white;
+    background-color: transparent;
+    text-decoration: underline;
+  }
+a:active {
+    color: white;
+    background-color: transparent;
+    text-decoration: underline;
+  }
