--- a/Tsang, Kevin Website Project/code.css
+++ b/Tsang, Kevin Website Project/code.css
@@ -5,6 +5,10 @@
     font-weight:normal;
 }
 
+.skills{
+    color: white;
+    font-size:40px;
+}
 body {
     width:100%;
     height:100vh;
@@ -40,7 +44,7 @@ body {
     color:white;
     position: absolute;
     margin-top: 50px;
-    margin-left:32.5%;
+    margin-left:29%;
 }
 
 
@@ -64,3 +68,23 @@ a:active {
     background-color: transparent;
     text-decoration: underline;
   }
+
+.back {
+    margin: auto;
+}
+
+table, th, td {
+    border:1px solid white;
+    border-collapse: collapse;
+    padding: 20px;
+  }
+
+table{
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-top: 2%;
+}
+
+td{
+    text-align:justify;
+}
